<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/logo_120"
        android:layout_height="@dimen/logo_120"
        android:layout_marginTop="@dimen/margin_top_logo_40"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_right_64"
        android:layout_marginRight="@dimen/margin_left_right_64"
        android:layout_marginTop="@dimen/margin_top_username_32"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_login_20"
                    android:layout_height="@dimen/icon_login_20"
                    android:src="@drawable/icon_username" />

                <com.appromobile.partnerapp.font.Edittex_Font_SanFrancisco
                    android:id="@+id/edittext_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/txt_0_user_name"
                    android:maxLines="1"
                    android:textColor="@color/org"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_line_4"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edittex_16"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_login_20"
                    android:layout_height="@dimen/icon_login_20"
                    android:src="@drawable/icon_password" />

                <com.appromobile.partnerapp.font.Edittex_Font_SanFrancisco
                    android:id="@+id/edittex_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/txt_0_pass_word"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/org"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_line_4"
                android:background="@color/gray" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_right_64"
        android:layout_marginRight="@dimen/margin_left_right_64"
        android:layout_marginTop="@dimen/margin_edittex_16"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_login_remember"
                android:layout_width="@dimen/icon_login_20"
                android:layout_height="@dimen/icon_login_20"
                android:layout_gravity="center"
                android:src="@drawable/box" />

            <com.appromobile.partnerapp.font.TextView_Font_SanFrancisco_Bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_0_remember_me"
                android:textColor="@color/gray" />

        </LinearLayout>

        <com.appromobile.partnerapp.font.Button_Font_SanFrancisco
            android:id="@+id/button_login_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bg_button_login"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/txt_0_login"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/textView_login_forgot"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Forgot your password?"-->
    <!--android:textColor="#123"/>-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_city_40"
        android:src="@drawable/city" />
</LinearLayout>
